<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.bilicraft</groupId>
    <artifactId>BiliWhiteList-Velocity</artifactId>
    <version>2.0</version>
    <packaging>jar</packaging>

    <name>BiliWhiteList-Velocity</name>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <relocations>
                                <relocation>
                                    <pattern>org.enginehub.squirrelid.</pattern>
                                    <shadedPattern>com.bilicraft.biliwhitelistvelocity.shade.squirrelid.</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.google.guava.guava.</pattern>
                                    <shadedPattern>com.bilicraft.biliwhitelistvelocity.shade.com.google.guava.guava.</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.mysql.</pattern>
                                    <shadedPattern>com.bilicraft.biliwhitelistvelocity.shade.mysql.</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.zaxxer.</pattern>
                                    <shadedPattern>com.bilicraft.biliwhitelistvelocity.shade.zaxxer.</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.googlecode.json-simple.json-simple.</pattern>
                                    <shadedPattern>com.bilicraft.biliwhitelistvelocity.shade.json-simple.</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>enginehub-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.velocitypowered</groupId>
            <artifactId>velocity-api</artifactId>
            <version>3.3.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>4.0.3</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.enginehub</groupId>
            <artifactId>squirrelid</artifactId>
            <version>0.3.2</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <artifactId>paper-api</artifactId>
                    <groupId>io.papermc.paper</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>guava</artifactId>
                    <groupId>com.google.guava</groupId>
                </exclusion>
            </exclusions>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>23.0.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>33.2.1-jre</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>8.3.0</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>com.gitlab.ruany</groupId>
            <artifactId>LiteBansAPI</artifactId>
            <version>0.5.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>
